configuring logging (#36)
* configuring logging

* configuring performance logs